tests/snapshots/snapshots__confirm_modal_tokyo_night.snap
---
source: tests/snapshots.rs
expression: "render_to_string(&app, 80, 24)"
---
▌ lazyjust  · ./justfile  · 2 recipes                                           
  CI ───────────────────────  build                                             
   build  ●                   Build release                                     
   ○ test                                                                       
                              command                                           
                                $ cargo build --release                         
                                                                                
                                                                                
                                                                                
                ╭ confirm ─────────────────────────────────────╮                
                │kill session?                                 │                
                │  [y]es     [n]o                              │                
                │                                              │                
                ╰──────────────────────────────────────────────╯                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
kill session? y yes  ·  n no                                                    

--- styled cells ---
(0,0) "▌" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(2,0) "l" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(3,0) "a" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(4,0) "z" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(5,0) "y" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(6,0) "j" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(7,0) "u" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(8,0) "s" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(9,0) "t" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(12,0) "·" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(14,0) "." fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(15,0) "/" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(16,0) "j" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(17,0) "u" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(18,0) "s" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(19,0) "t" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(20,0) "f" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(21,0) "i" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(22,0) "l" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(23,0) "e" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(26,0) "·" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(28,0) "2" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(30,0) "r" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(31,0) "e" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(32,0) "c" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(33,0) "i" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(34,0) "p" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(35,0) "e" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(36,0) "s" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(2,1) "C" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(3,1) "I" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(5,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(6,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(7,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(8,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(9,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(10,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(11,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(12,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(13,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(14,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(15,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(16,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(17,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(18,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(19,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(20,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(21,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(22,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(23,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(24,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(25,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(26,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(27,1) "─" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(30,1) "b" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(31,1) "u" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(32,1) "i" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(33,1) "l" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(34,1) "d" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(3,2) "b" fg=Rgb(255, 255, 255) bg=Rgb(40, 52, 87) mod=BOLD
(4,2) "u" fg=Rgb(255, 255, 255) bg=Rgb(40, 52, 87) mod=BOLD
(5,2) "i" fg=Rgb(255, 255, 255) bg=Rgb(40, 52, 87) mod=BOLD
(6,2) "l" fg=Rgb(255, 255, 255) bg=Rgb(40, 52, 87) mod=BOLD
(7,2) "d" fg=Rgb(255, 255, 255) bg=Rgb(40, 52, 87) mod=BOLD
(10,2) "●" fg=Rgb(122, 162, 247) bg=Rgb(40, 52, 87) mod=NONE
(30,2) "B" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(31,2) "u" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(32,2) "i" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(33,2) "l" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(34,2) "d" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(36,2) "r" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(37,2) "e" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(38,2) "l" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(39,2) "e" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(40,2) "a" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(41,2) "s" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(42,2) "e" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(3,3) "○" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(5,3) "t" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(6,3) "e" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(7,3) "s" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(8,3) "t" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(30,4) "c" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(31,4) "o" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(32,4) "m" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(33,4) "m" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(34,4) "a" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(35,4) "n" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(36,4) "d" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(32,5) "$" fg=Rgb(125, 207, 255) bg=Rgb(26, 27, 38) mod=NONE
(34,5) "c" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(35,5) "a" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(36,5) "r" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(37,5) "g" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(38,5) "o" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(40,5) "b" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(41,5) "u" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(42,5) "i" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(43,5) "l" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(44,5) "d" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(46,5) "-" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(47,5) "-" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(48,5) "r" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(49,5) "e" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(50,5) "l" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(51,5) "e" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(52,5) "a" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(53,5) "s" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(54,5) "e" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(16,9) "╭" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(18,9) "c" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(19,9) "o" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(20,9) "n" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(21,9) "f" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(22,9) "i" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(23,9) "r" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(24,9) "m" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=BOLD
(26,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(27,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(28,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(29,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(30,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(31,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(32,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(33,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(34,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(35,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(36,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(37,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(38,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(39,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(40,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(41,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(42,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(43,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(44,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(45,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(46,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(47,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(48,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(49,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(50,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(51,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(52,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(53,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(54,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(55,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(56,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(57,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(58,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(59,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(60,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(61,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(62,9) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(63,9) "╮" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(16,10) "│" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(17,10) "k" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(18,10) "i" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(19,10) "l" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(20,10) "l" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(22,10) "s" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(23,10) "e" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(24,10) "s" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(25,10) "s" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(26,10) "i" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(27,10) "o" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(28,10) "n" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(29,10) "?" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(63,10) "│" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(16,11) "│" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(19,11) "[" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(20,11) "y" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(21,11) "]" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(22,11) "e" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(23,11) "s" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(29,11) "[" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(30,11) "n" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(31,11) "]" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(32,11) "o" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(63,11) "│" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(16,12) "│" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(63,12) "│" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(16,13) "╰" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(17,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(18,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(19,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(20,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(21,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(22,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(23,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(24,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(25,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(26,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(27,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(28,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(29,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(30,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(31,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(32,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(33,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(34,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(35,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(36,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(37,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(38,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(39,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(40,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(41,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(42,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(43,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(44,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(45,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(46,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(47,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(48,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(49,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(50,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(51,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(52,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(53,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(54,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(55,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(56,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(57,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(58,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(59,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(60,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(61,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(62,13) "─" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(63,13) "╯" fg=Rgb(122, 162, 247) bg=Rgb(26, 27, 38) mod=NONE
(0,23) "k" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(1,23) "i" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(2,23) "l" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(3,23) "l" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(5,23) "s" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(6,23) "e" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(7,23) "s" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(8,23) "s" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(9,23) "i" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(10,23) "o" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(11,23) "n" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(12,23) "?" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(14,23) "y" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(16,23) "y" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(17,23) "e" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(18,23) "s" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(21,23) "·" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(24,23) "n" fg=Rgb(192, 202, 245) bg=Rgb(26, 27, 38) mod=NONE
(26,23) "n" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
(27,23) "o" fg=Rgb(86, 95, 137) bg=Rgb(26, 27, 38) mod=NONE
